bk_ida/gccida/c1/get_condition_for_loop
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_condition_for_loop/src/loop.c:9810:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v4; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_condition_for_loop/src/loop.c:9816:24: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v4 = swap_condition( ( rtx_code)*( unsigned __int16 *)v3); 
                       ^~~~~~~~
                       rtx_cost
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_condition_for_loop/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_condition_for_loop/src/loop.c:9816:33: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'unsigned short *')
v4 = swap_condition( ( rtx_code)*( unsigned __int16 *)v3); 
                     ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_condition_for_loop/src/obj/loop.o] Error 1
